--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.2",
     "chartist": "^0.10.1",
     "create-react-app": "^1.3.3",
     "datatables.net": "^1.10.16",
@@ -14,6 +15,7 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-chartist": "^0.13.0",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^15.6.1",
     "react-notification-system": "^0.2.15",
     "react-router": "^4.1.2",
