--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartist": "^0.13.0",
     "react-chartjs-2": "^2.7.0",
     "react-dom": "^15.6.1",
+    "react-google-login": "^3.2.1",
     "react-notification-system": "^0.2.15",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
