--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "datatables.net": "^1.10.16",
     "google-maps-react": "^1.1.0",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "react": "^15.6.1",
