--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "chartist": "^0.10.1",
     "create-react-app": "^1.3.3",
     "datatables.net": "^1.10.16",
+    "datatables.net-fixedcolumns": "^3.2.4",
+    "datatables.net-scroller": "^1.4.4",
     "google-maps-react": "^1.1.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -32,5 +34,6 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
