--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "chartist": "^0.10.1",
     "create-react-app": "^1.3.3",
     "datatables.net": "^1.10.16",
+    "datatables.net-buttons": "^1.5.1",
     "datatables.net-fixedcolumns": "^3.2.4",
     "datatables.net-scroller": "^1.4.4",
     "google-maps-react": "^1.1.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "jszip": "^3.1.5",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
+    "pdfmake": "^0.1.36",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
     "react-chartist": "^0.13.0",
