--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "pdfmake": "^0.1.36",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.31.1",
     "react-chartist": "^0.13.0",
     "react-chartjs-2": "^2.7.0",
@@ -26,8 +26,10 @@
     "react-google-login": "^3.2.1",
     "react-notification-system": "^0.2.15",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.10"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.10",
+    "webpack": "^4.8.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -38,5 +40,17 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/destraaaa/hris.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/destraaaa/hris/issues"
+  },
+  "homepage": "https://github.com/destraaaa/hris#readme",
+  "description": ""
 }
