--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.10",
+    "react-toastify": "^4.0.1",
     "webpack": "^4.8.3",
     "webpack-dev-server": "^3.1.4"
   },
