--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "jszip": "^3.1.5",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "pdfmake": "^0.1.36",
