--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "datatables.net-buttons": "^1.5.1",
     "datatables.net-fixedcolumns": "^3.2.4",
     "datatables.net-scroller": "^1.4.4",
+    "formBuilder": "^2.9.8",
     "google-maps-react": "^1.1.0",
     "jquery": "^3.3.1",
+    "jquery-ui-sortable": "^1.0.0",
     "js-cookie": "^2.2.0",
     "jszip": "^3.1.5",
     "moment": "^2.22.2",
@@ -30,7 +32,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.10",
     "react-toastify": "^4.0.1",
-    "webpack": "^4.8.3",
+    "webpack": "^3.11.0",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
